[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Pantalla de carga.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.901961, 0, 1, 0.784314 )

[node name="Pantalla de carga" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio_train" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Panel_fondo" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel_fondo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -561.0
margin_top = 456.0
margin_right = 561.0
margin_bottom = 490.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Panel_fondo/MarginContainer"]
margin_right = 1122.0
margin_bottom = 34.0
size_flags_vertical = 1
custom_styles/fg = SubResource( 1 )
value = 25.0
percent_visible = false

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
